RESOLVED FIXED207390
[iOS] Double tapping shouldn't scroll the page when the body has `overflow: hidden`
https://bugs.webkit.org/show_bug.cgi?id=207390
Summary [iOS] Double tapping shouldn't scroll the page when the body has `overflow: h...
Wenson Hsieh
Reported 2020-02-07 09:46:12 PST
The page isn't scrollable with pan gestures anyways in this scenario, so it doesn't make sense that it's still scrollable by double tapping. However, we need to make sure that we still allow scrolling when revealing focused editable elements (otherwise, they could be underlapped by the software keyboard).
Attachments
Patch (8.11 KB, patch)
2020-02-07 10:28 PST, Wenson Hsieh
no flags
Patch (7.61 KB, patch)
2020-02-07 11:07 PST, Wenson Hsieh
no flags
Update 'Reviewed by' line again (7.64 KB, patch)
2020-02-07 11:40 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2020-02-07 09:46:36 PST
Wenson Hsieh
Comment 2 2020-02-07 10:28:39 PST Comment hidden (obsolete)
Wenson Hsieh
Comment 3 2020-02-07 11:07:26 PST Comment hidden (obsolete)
Wenson Hsieh
Comment 4 2020-02-07 11:40:53 PST
Created attachment 390110 [details] Update 'Reviewed by' line again
WebKit Commit Bot
Comment 5 2020-02-07 15:25:49 PST
Comment on attachment 390110 [details] Update 'Reviewed by' line again Clearing flags on attachment: 390110 Committed r256072: <https://trac.webkit.org/changeset/256072>
WebKit Commit Bot
Comment 6 2020-02-07 15:25:51 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.