[iOS] Double tapping shouldn't scroll the page when the body has `overflow: hidden` https://bugs.webkit.org/show_bug.cgi?id=207390 <rdar://problem/56960774>

Reviewed by Tim Horton and Simon Fraser.

Source/WebKit:

Bail out of several codepaths that zoom and scroll WKScrollView as a result of smart magnification gestures
(e.g. one-finger double taps), in the case where scrolling has been disabled on WKScrollView. This may occur
if the page has `overflow: hidden` on the body or root, but may also happen due to a WebKit client disabling
scrolling via native API, such as `webView.scrollView.scrollingEnabled = NO;`.

Test: fast/scrolling/ios/double-tap-to-scroll-with-scrolling-disabled.html

* UIProcess/API/ios/WKWebViewIOS.mm:
(-[WKWebView _zoomToPoint:atScale:animated:]):
(-[WKWebView _scrollToRect:origin:minimumScrollDistance:]):

Drive-by fix: change some `false`s to `NO`s, and `true`s to `YES`s.

(-[WKWebView _zoomToFocusRect:selectionRect:insideFixed:fontSize:minimumScale:maximumScale:allowScaling:forceScroll:]):

LayoutTests:

Add a new layout test to verify that double tapping an element doesn't cause the page to scroll if `overflow:
hidden` is applied to the body.

* fast/scrolling/ios/double-tap-to-scroll-with-scrolling-disabled-expected.txt: Added.
* fast/scrolling/ios/double-tap-to-scroll-with-scrolling-disabled.html: Added.


Canonical link: https://commits.webkit.org/220411@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256072 268f45cc-cd09-0410-ab3c-d52691b4dbfc